[tool.poetry]
name = "ya_pickledb"
version = "0.1.0"
description = "Yet another PickleDB (thread-safe!)"
authors = ["Angelo Delicato <thelicato@duck.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ya_pickledb" }]

[tool.poetry.dependencies]
python = "^3.9"
safer = "^4.12.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
